--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@holonym-foundation/utils": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^14.1.1",
+    "@testing-library/user-event": "^14.4.3",
     "@zk-kit/incremental-merkle-tree": "^1.0.0",
     "buffer": "^6.0.3",
     "buffer-xor": "^2.0.2",
@@ -21,6 +21,7 @@
     "react-query": "^3.38.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "react-step-progress-bar": "^1.0.3",
     "stream": "^0.0.2",
     "typescript": "^4.6.2",
     "upgrade": "^1.1.0",
