--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@babel/preset-typescript": "^7.16.7",
     "@craco/craco": "^6.4.5",
-    "@holonym-foundation/utils": "^1.0.0",
+    "@holonym-foundation/utils": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.4.3",
@@ -15,6 +15,7 @@
     "ethers": "^5.5.4",
     "process": "^0.11.10",
     "react": "^18.1.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-error-boundary": "^3.1.4",
     "react-loader-spinner": "^5.3.4",
