--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@craco/craco": "^6.4.5",
     "@holonym-foundation/utils": "^1.0.1",
+    "@lit-protocol/sdk-browser": "^1.1.234",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.4.3",
