--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@zk-kit/incremental-merkle-tree": "^1.0.0",
     "buffer": "^6.0.3",
     "buffer-xor": "^2.0.2",
+    "classnames": "^2.3.2",
     "ethers": "^5.5.4",
     "process": "^0.11.10",
     "react": "^18.1.0",
