--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.4.3",
+    "@unstoppabledomains/resolution": "^8.3.3",
     "@zk-kit/incremental-merkle-tree": "^1.0.0",
     "axios": "^1.2.0",
     "big-integer": "^1.6.51",
