--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@craco/craco": "^6.4.5",
     "@holonym-foundation/utils": "^1.0.1",
     "@lit-protocol/sdk-browser": "^1.1.234",
+    "@tanstack/react-query": "^4.20.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.4.3",
     "@unstoppabledomains/resolution": "^8.3.3",
+    "@veriff/incontext-sdk": "^1.3.1",
     "@zk-kit/incremental-merkle-tree": "^1.0.0",
     "axios": "^1.2.0",
     "big-integer": "^1.6.51",
@@ -25,13 +27,13 @@
     "react-error-boundary": "^3.1.4",
     "react-loader-spinner": "^5.3.4",
     "react-phone-number-input": "^3.2.12",
-    "react-query": "^3.38.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-step-progress-bar": "^1.0.3",
     "stream": "^0.0.2",
     "typescript": "^4.6.2",
     "upgrade": "^1.1.0",
+    "uuid": "^9.0.0",
     "wagmi": "^0.3.2",
     "wasm-loader": "^1.3.0",
     "web-vitals": "^2.1.4",
