--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-step-progress-bar": "^1.0.3",
+    "siwe": "^1.1.6",
     "stream": "^0.0.2",
     "typescript": "^4.6.2",
     "upgrade": "^1.1.0",
