--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "test": "craco test",
     "eject": "craco eject"
   },
+  "resolutions": {
+    "zustand": "3.7.2"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
