--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-error-boundary": "^3.1.4",
     "react-loader-spinner": "^5.3.4",
     "react-phone-number-input": "^3.2.12",
+    "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-step-progress-bar": "^1.0.3",
