--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "stream": "^0.0.2",
     "typescript": "^4.6.2",
     "upgrade": "^1.1.0",
+    "usehooks-ts": "^2.9.1",
     "wagmi": "^0.3.2",
     "wasm-loader": "^1.3.0",
     "web-vitals": "^2.1.4",
