--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@unstoppabledomains/resolution": "^8.3.3",
     "@zk-kit/incremental-merkle-tree": "^1.0.0",
+    "aes-js": "^3.1.2",
     "axios": "^1.2.0",
     "big-integer": "^1.6.51",
     "buffer": "^6.0.3",
