--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-step-progress-bar": "^1.0.3",
+    "readline": "^1.3.0",
     "siwe": "^1.1.6",
+    "snarkjs": "0.5.0",
     "stream": "^0.0.2",
     "typescript": "^4.6.2",
     "upgrade": "^1.1.0",
@@ -66,11 +68,20 @@
       "@babel/preset-typescript"
     ]
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not op_mini all"
-  ],
+  "browserslist": {
+    "production": [
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
