--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@craco/craco": "^6.4.5",
     "@holonym-foundation/utils": "^1.0.1",
     "@paypal/react-paypal-js": "^7.8.2",
+    "@rize-labs/banana-wallet-sdk": "^0.0.1",
     "@tanstack/react-query": "^4.22.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
