--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "buffer": "^6.0.3",
     "buffer-xor": "^2.0.2",
     "classnames": "^2.3.2",
+    "constants-browserify": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
     "ethers": "^5.5.4",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "^18.1.0",
     "react-device-detect": "^2.2.2",
@@ -36,6 +40,7 @@
     "siwe": "^1.1.6",
     "snarkjs": "0.5.0",
     "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
     "typescript": "^4.6.2",
     "upgrade": "^1.1.0",
     "usehooks-ts": "^2.9.1",
