--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/preset-typescript": "^7.16.7",
-    "@craco/craco": "^6.4.5",
+    "@craco/craco": "^7.0.0",
     "@holonym-foundation/utils": "^1.0.1",
     "@paypal/react-paypal-js": "^7.8.2",
     "@rize-labs/banana-wallet-sdk": "^0.0.1",
@@ -34,7 +34,7 @@
     "react-phone-number-input": "^3.2.12",
     "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-step-progress-bar": "^1.0.3",
     "readline": "^1.3.0",
     "siwe": "^1.1.6",
