--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "constants-browserify": "^1.0.0",
     "crypto-browserify": "^3.12.0",
     "ethers": "^5.5.4",
+    "formik": "^2.2.9",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
@@ -48,6 +49,7 @@
     "wasm-loader": "^1.3.0",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28",
+    "yup": "^1.0.0",
     "zokrates-js": "^1.1.3"
   },
   "resolutions": {
