--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "webfontloader": "^1.6.28",
     "worker-loader": "^3.0.8",
     "yup": "^1.0.0",
-    "zokrates-js": "^1.1.3"
+    "zokrates-js": "1.1.4"
   },
   "resolutions": {
     "zustand": "3.7.2"
