--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ethers": "^5.5.4",
     "formik": "^2.2.9",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
