--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@craco/craco": "^6.4.5",
     "@datadog/browser-logs": "^4.45.0",
+    "@datadog/browser-rum": "^4.45.0",
     "@holonym-foundation/utils": "^1.0.1",
     "@paypal/react-paypal-js": "^7.8.2",
     "@tanstack/react-query": "^4.22.0",
