--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "onfido-sdk-ui": "^13.1.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
