--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-node-polyfills": "^0.11.2",
     "vite-plugin-top-level-await": "^1.3.1"
   }
 }
