--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "zk-frontend-vite-typescript",
+  "name": "zk-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --outDir build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
