--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "buffer": "^6.0.3",
     "buffer-xor": "^2.0.2",
     "classnames": "^2.3.2",
+    "dotenv": "^16.3.1",
     "ethers": "^5.5.4",
     "formik": "^2.2.9",
     "install": "^0.13.0",
@@ -50,8 +51,9 @@
     "stream": "^0.0.2",
     "upgrade": "^1.1.0",
     "usehooks-ts": "^2.9.1",
+    "viem": "^1.6.7",
     "vite-plugin-wasm": "^3.2.2",
-    "wagmi": "^0.3.2",
+    "wagmi": "^1.3.10",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28",
     "yup": "^1.0.0",
